--- a/css/styles.css
+++ b/css/styles.css
@@ -826,20 +826,27 @@ h1, h2, h3, h4, h5, h6 {
 .footer__body {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0px 0px -60px 0px;
 }
-@media (max-width: 992px) {
+@media (max-width: 1110px) {
   .footer__body {
     justify-content: space-around;
   }
 }
 
 .footer__about-us {
-  flex: 0 1 19.74%;
-  margin: 0px 5.98% 0px 0px;
+  flex: 0 0 231px;
+  margin: 0px 0px 60px 0px;
 }
-@media (max-width: 992px) {
+@media (max-width: 1110px) {
   .footer__about-us {
-    margin: 0px 0px 60px 0px;
+    text-align: center;
+  }
+}
+@media (max-width: 590px) {
+  .footer__about-us {
+    flex: 0 1 100%;
   }
 }
 
@@ -884,12 +891,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer__social {
-  flex: 0 1 17.6%;
-  margin: 0px 7.95% 0px 0px;
+  flex: 0 1 206px;
 }
-@media (max-width: 992px) {
+@media (max-width: 1110px) {
   .footer__social {
-    margin: 0px 0px 0px 0px;
+    text-align: center;
   }
 }
 
@@ -903,6 +909,11 @@ h1, h2, h3, h4, h5, h6 {
 .footer-list {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 590px) {
+  .footer-list {
+    margin: 0px 0px 60px 0px;
+  }
 }
 
 .footer-list__link {
@@ -928,9 +939,11 @@ h1, h2, h3, h4, h5, h6 {
 .footer__form {
   flex: 0 1 48.72%;
 }
-@media (max-width: 992px) {
+@media (max-width: 1110px) {
   .footer__form {
-    flex: 1 1 100%;
+    flex: 0 1 100%;
+    text-align: center;
+    margin: 0px 0px 60px 0px;
   }
 }
 
@@ -945,9 +958,22 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0px 0px 20px 0px;
+}
+@media (max-width: 1110px) {
+  .form__subscription {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 590px) {
+  .form__subscription {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 .form__subscription input {
-  margin: 0px 12px 0px 0px;
+  margin: 0px 12px 20px 0px;
   flex: 1 1 auto;
   height: 50px;
   padding: 0px 0px 0px 16px;
@@ -960,6 +986,18 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   line-height: 125%;
   letter-spacing: 0.48px;
+}
+@media (max-width: 1110px) {
+  .form__subscription input {
+    margin: 0px 0px 20px 0px;
+    flex: 0 0 auto;
+    width: 450px;
+  }
+}
+@media (max-width: 590px) {
+  .form__subscription input {
+    width: 100%;
+  }
 }
 .form__subscription button {
   flex: 0 0 200px;
@@ -976,6 +1014,12 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 1110px) {
+  .form__subscription button {
+    width: 200px;
+    flex: 0 0 auto;
+  }
 }
 .form__subscription button img {
   padding: 0px 0px 0px 10px;
