--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -761,25 +761,30 @@ body {
 .footer__body {
    display: flex;
    flex-wrap: wrap;
+   justify-content: space-between;
+   margin: 0px 0px -60px 0px;
 
-   @media (max-width: 992px) {
-      justify-content: space-around;
+   @media (max-width: 1110px) {
+      justify-content: space-around ;
    }
-   // justify-content: space-between;
 }
 .footer__about-us {
-   flex: 0 1 19.74%;
-   margin: 0px 5.98% 0px 0px;
+   flex: 0 0 231px;
+   margin: 0px 0px 60px 0px;
+   
+    @media (max-width: 1110px) {
+      text-align: center;     
+   }
 
-   @media (max-width:992px) {
-      margin: 0px 0px 60px 0px;  
+   @media (max-width: 590px) {
+      flex: 0 1 100%;
    }
 }
 .about-us {
 }
 .about-us__logo {
    display: block;
-   margin: 0px 0px 20px 0px;
+   margin: 0px 0px 20px 0px;   
 }
 .logo {
 }
@@ -791,6 +796,7 @@ body {
    color: #FFF !important;
 }
 .about-us__contacts {
+   
 }
 .contacts-footer {
 }
@@ -823,11 +829,10 @@ body {
    display: block; 
 }
 .footer__social {
-   flex: 0 1 17.6%;
-   margin: 0px 7.95% 0px 0px;
+   flex: 0 1 206px;
 
-   @media (max-width: 992px) {   
-      margin: 0px 0px 0px 0px;
+   @media (max-width: 1110px) {
+      text-align: center;
    }
 }
 .social-footer {
@@ -841,6 +846,10 @@ body {
 .footer-list {
    display: flex;
    justify-content: space-between;
+
+   @media (max-width: 590px) {
+      margin: 0px 0px 60px 0px;
+   }
 }
 .footer-list__link {
    position: relative;
@@ -865,8 +874,10 @@ body {
 .footer__form {
    flex: 0 1 48.72%;
 
-   @media (max-width:992px) {
-      flex: 1 1 100%;   
+   @media (max-width: 1110px) {
+      flex: 0 1 100%;
+      text-align: center;
+      margin: 0px 0px 60px 0px;
    }
 }
 .form-footer {
@@ -885,9 +896,20 @@ body {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
+   margin: 0px 0px 20px 0px;
+
+   @media (max-width: 1110px) {
+      flex-direction: column; 
+      align-items: center;    
+   }
+
+   @media (max-width: 590px) {
+      flex-direction: row; 
+      justify-content: center;    
+   }
 
    input {      
-      margin: 0px 12px 0px 0px;
+      margin: 0px 12px 20px 0px;
       flex: 1 1 auto;
       height: 50px;
       padding: 0px 0px 0px 16px;
@@ -900,6 +922,16 @@ body {
       font-weight: 400;
       line-height:  125%;
       letter-spacing: 0.48px;
+
+      @media (max-width: 1110px) {
+         margin: 0px 0px 20px 0px;
+         flex: 0 0 auto;
+         width: 450px;    
+      }
+
+      @media (max-width: 590px) {    
+         width: 100%;
+      }
    }
 
    button {
@@ -917,6 +949,11 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+
+      @media (max-width: 1110px) {
+         width: 200px;
+         flex: 0 0 auto;
+      }
 
       img {
          padding: 0px 0px 0px 10px;
