--- a/css/styles.css
+++ b/css/styles.css
@@ -930,7 +930,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #FFF;
   letter-spacing: 0.42px;
   text-transform: uppercase;
-  margin: 0px 0px 32px 0px;
+  margin: 0px 0px 20px 0px;
 }
 
 .footer-list {
@@ -944,23 +944,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer-list__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-list__link .footer-list__link-circle {
   position: relative;
-  z-index: 10;
 }
-.footer-list__link:before {
-  content: "";
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
+.footer-list__link .footer-list__link-icon {
   position: absolute;
-  top: -12px;
-  left: -12px;
-  z-index: 5;
-  transition: all 0.5s ease 0s;
-}
-.footer-list__link:hover:before {
-  background-color: rgba(33, 150, 243, 0.5);
 }
 
 .footer__form {
