--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -867,7 +867,7 @@ body {
    color: #FFF;
    letter-spacing: 0.42px;
    text-transform: uppercase;
-   margin: 0px 0px 32px 0px;
+   margin: 0px 0px 20px 0px;
 }
 .footer-list {
    display: flex;
@@ -878,24 +878,18 @@ body {
    }
 }
 .footer-list__link {
-   position: relative;
-   z-index: 10;
-   &:before {
-      content: '';
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-      background-color: rgba(255, 255, 255, 0.10);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   & .footer-list__link-circle {
+      position: relative;
+   } 
+
+   & .footer-list__link-icon {
       position: absolute;
-      top: -12px;
-      left: -12px;
-      z-index: 5;
-      transition: all 0.5s ease 0s;
    }
 
-   &:hover:before {
-         background-color: rgb(33, 150, 243, 0.5);
-   }
 }
 .footer__form {
    flex: 0 1 48.72%;
